tests/toylang/neg/001103_mutation.toylang
program a = { if a then then; } .
